samples/_failures_safe/1761077091_d95b26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b198f7d.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_4b198f7d.c:163:19: error: missing terminating " character
  163 |         "NUMBER", "IDENT
      |                   ^~~~~~
./samples/SAFE/__tmp_4b198f7d.c:163:9: error: expected expression at end of input
  163 |         "NUMBER", "IDENT
      |         ^~~~~~~~
./samples/SAFE/__tmp_4b198f7d.c:163:9: error: expected declaration or statement at end of input
